kubernetes/app_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: meetups
  name: meetups
spec:
  replicas: 3
  selector:
    matchLabels:
      app: meetups
  strategy:
    type: RollingUpdate
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: meetups
    spec:
      containers:
        - image: registry.alexbissessur.dev/meetups:6.54
          name: meetups
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8080
      imagePullSecrets:
        - name: regcred
