kubernetes/db_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: db-deploy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql:latest
          volumeMounts:
            - name: mysql-data
              mountPath: /var/lib/mysql
          ports:
            - containerPort: 3306

      volumes:
        - name: mysql-data
          persistentVolumeClaim:
            claimName: meetups-data
