kubernetes/redis_deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:8.0-M03-bookworm
          name: redis
          ports:
            - containerPort: 6379
          imagePullPolicy: IfNotPresent
