kubernetes/app_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetups-svc
spec:
  selector:
    app: meetups
  ports:
    - protocol: TCP
      port: 3306
