kubernetes/db_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: meetup-mysql
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
