kubernetes/redis_svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-svc
spec:
  type: LoadBalancer
  selector:
    app: redis
  ports:
    - protocol: TCP
      port: 6379
