kubernetes/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: meetups
# spec:
#   rules:
#   - host: meetup.mu
#     http:
#       paths:
#       - path: /
#         pathType: Prefix
#         backend:
#           service:
#             name: meetups-svc
#             port:
#               number: 8000


apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: meetups
  annotations:
    cert-manager.io/cluster-issuer: "prod-issuer"
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - meetup.mu
    secretName: meetup-tls
  rules:
  - host: meetup.mu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meetups-svc
            port:
              number: 8000

  - host: api.meetup.mu
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: meetup-scraper-api
            port:
              number: 80
